Compiler/tests/bad/foreach2.nx
type t = [0 .. 1];
type a : array t of t;

foreach i in a
{   
    print(i);
}